src/test/test_cases/invalid/syntaxErr/forLoop/forNoDo.wacc
# missing 'do' in for loop

# Output:
# #syntax_error#

# Exit:
# 100

# Program:

begin
  for (int x = 8, x < 7 + 9, x = x + 1)
    println "This test has no 'do' in the for loop"
  done
end
  